tests/errors/syn_method21.java
public class syn_method21 {
public static int[] main ( ) {

}